--- a/presentation.qmd
+++ b/presentation.qmd
@@ -273,47 +273,15 @@ cor(df_country_1$prop_gndr_bin, df_country_1$prop_qc19_yes, method = "spearman")
 ```
 :::
 
-## Religiosity
-
-ALEX COPIED EVERYTHING TO GET IT TO RUN \<3
-
 ```{r}
 #| echo: false
 
-df_descriptive <- merged_df
-
-df_descriptive$qc19_multinominal <- factor(df_descriptive$qc19, levels = c(1, 2, 3),labels = c("Yes", "No", "Don't know"))
-
-qc19labels <- c("Yes", "No", "Don't know")
-names(qc19labels) <- c(1, 2, 3)
-```
-
-```{r}
-#| echo: false
-
-df_descriptive$qc20_multinominal <- factor(df_descriptive$qc20, levels = c(1, 2, 3),labels = c("Yes", "No", "Don't know"))
-
-```
-
-```{r}
-#| echo: false
-
-df_country_1 <- 
-  df_descriptive |>
-  group_by(country_name) |> 
-  summarize(
-    prop_gndr_bin = (sum(qc20_multinominal == "Yes") / n())*100, # Calculate proportion with high education
-    prop_qc19_yes = (sum(qc19 == 1) / n())*100)
-
-```
-
-
-```{r}
-#| echo: false
-
+#alex needs this variable
 df_descriptive$d1_ordinal <- factor(df_descriptive$d1, levels = c(1, 2, 3, 4 , 5, 6, 7, 8, 9, 10, 97, 98),labels = c("Left", "2", "3", "4", "5", "6", "7", "8", "9", "Right", "Non-response", "Don't know"))
 
 ```
+
+## Religiosity
 
 ```{r}
 #| echo: false
@@ -330,28 +298,6 @@ df_descriptive <-
                              sd3 < 14 ~ "Atheist | Agnostic",
                              sd3 == 14 ~ "Other",
                              sd3 > 14 ~ "Don't know | Refusal")) 
-
-
-```
-
-```{r}
-#| echo: false
-
-df_descriptive <-
-  df_descriptive |> 
-  mutate(
-    sd1_7_NA = car::recode(sd1_7, "1=1; 2=0; 3=NA; 4=2"),
-    sd1_7_multinomial = factor(sd1_7_NA, levels = c(0, 1, 2), labels = c("No", "Yes", "Don't know"))
-  )
-
-```
-
-```{r}
-#| echo: false
-
-df_descriptive$qc1_8_ordinal <- factor(df_descriptive$qc1_8, levels = c(1, 2, 3, 4 , 5, 6),labels = c("Very wide spread", "Fairly wide spread", "Fairly rare", "Very rare", "Nonexistent
-", "DK"))
-
 ```
 
 ::: panel-tabset
@@ -360,101 +306,20 @@ df_descriptive$qc1_8_ordinal <- factor(df_descriptive$qc1_8, levels = c(1, 2, 3,
 ```{r}
 #| echo: false
 
-
-df_country_2 <-
-  df_descriptive |> 
-  mutate(qc1_8_ordinal = case_when(
-    qc1_8_ordinal == "Very wide spread" ~ "Very or fairly wide spread",
-    qc1_8_ordinal == "Fairly wide spread" ~ "Very or fairly wide spread",
-    TRUE ~ qc1_8_ordinal
-  )) |> 
-  group_by(country_name) |> 
-  summarize(
-    prop_dis_wide = (sum(qc1_8_ordinal == "Very or fairly wide spread") / n())*100, # Calculate proportion with high education
-    prop_qc19_yes = (sum(qc19 == 1) / n())*100)
-```
-
-
-
-```{r}
-#| echo: false
-
-df_descriptive <- 
-  df_descriptive |>  
-  mutate(
-    sd2t = factor(sd2t, levels = c(0, 1), labels = c("Not mentioned", "Yes"))
-  )
-```
-
-```{r}
-#| echo: false
-
-df_descriptive <- 
-  df_descriptive |>  
-  mutate(
-    sd2_5 = factor(sd2_5, levels = c(0, 1), labels = c("Not mentioned", "Yes"))
-  )
-```
-
-```{r}
-#| echo: false
-
-df_descriptive <- 
-  df_descriptive |> 
-  mutate(d8 = case_when(d8 < 98 ~ d8,
-                        TRUE ~ NA)) # turning don't know and refusal into NA to keep continuous character of the variable - imputed later
-
+CrossTable(df_descriptive$sd3_cat, df_descriptive$qc19_multinominal,
+           digits=2, 
+           expected=F, 
+           asresid=T, 
+           chisq=TRUE, 
+           prop.chisq=F, 
+           format="SPSS")
 ```
 
 ## Share of Orthodox Christians
 
-
 ```{r}
 #| echo: false
 
-
-df_descriptive <- 
-  df_descriptive |> 
-  mutate(
-    d60 = car::recode(d60, "4=NA"),
-    d60_ordinal = factor(d60, levels = c(1, 2, 3), labels = c("Most of the time", "From time to time", "Almost never/ never"))
-  )
-```
-
-```{r}
-#| echo: false
-
-df_descriptive <- 
-  df_descriptive |> 
-  mutate(
-    qc15_1_ordinal = factor(qc15_1, levels = c(1, 2, 3, 4, 5), labels = c("Totally agree", "Tend to agree", "Tend to disagree", "Totally disagree", "Don't know"))
-  )
-```
-
-```{r}
-#| echo: false
-
-df_country_3 <- 
-  df_descriptive |>
-  mutate(qc15_1_ordinal = case_when(
-    qc15_1_ordinal == "Totally agree" ~ "Totally or tend to agree",
-    qc15_1_ordinal == "Tend to agree" ~ "Totally or tend to agree",
-    TRUE ~ qc15_1_ordinal
-  )) |> 
-  group_by(country_name) |> 
-  summarize(
-    prop_lgb_yes = (sum(qc15_1_ordinal == "Totally or tend to agree") / n())*100, # Calculate proportion with high education
-    prop_qc19_yes = (sum(qc19 == 1) / n())*100)
-
-```
-
-
-```{r}
-#| echo: false
-
-df_descriptive$d25_multinominal <- factor(df_descriptive$d25, labels = c("Rural area", "Small and middle sized town", "Large town", "Don't know"))
-
-# levels = c(1, 2, 3)
 df_descriptive |> 
   group_by(country_name) |> 
   summarise(share = mean(sd3_cat == "Orthodox Christian", na.rm = TRUE)*100) |> 
@@ -487,7 +352,6 @@ df_descriptive <-
     sd1_7_NA = car::recode(sd1_7, "1=1; 2=0; 3=NA; 4=2"),
     sd1_7_multinomial = factor(sd1_7_NA, levels = c(0, 1, 2), labels = c("No", "Yes", "Don't know"))
   )
-
 ```
 
 ```{r}
@@ -537,6 +401,14 @@ ggplot(df_descriptive, aes(x = qc19_multinominal, y = d11, fill = "red")) +
 ```
 
 ## Awareness of discrimination
+
+```{r}
+#| echo: false
+
+#alex needs this variable
+df_descriptive$qc1_8_ordinal <- factor(df_descriptive$qc1_8, levels = c(1, 2, 3, 4 , 5, 6),labels = c("Very wide spread", "Fairly wide spread", "Fairly rare", "Very rare", "Nonexistent
+", "DK"))
+```
 
 ::: panel-tabset
 ## Individual level
@@ -591,6 +463,17 @@ cor(df_country_2$prop_dis_wide, df_country_2$prop_qc19_yes, method = "spearman")
 ```
 :::
 
+```{r}
+#| echo: false
+
+#alex needs this variable
+df_descriptive <- 
+  df_descriptive |>  
+  mutate(
+    sd2t = factor(sd2t, levels = c(0, 1), labels = c("Not mentioned", "Yes"))
+  )
+```
+
 ## Sexual minority
 
 ```{r}
@@ -623,6 +506,24 @@ df_descriptive|>
         legend.title = element_blank()) +
   scale_y_continuous(labels = scales::percent_format(scale = 1)) +
   scale_fill_brewer(palette = "Dark2")
+```
+
+```{r}
+#| echo: false
+
+#alex needs this variable
+df_descriptive <- 
+  df_descriptive |> 
+  mutate(d8 = case_when(d8 < 98 ~ d8,
+                        TRUE ~ NA)) # turning don't know and refusal into NA to keep continuous character of the variable - imputed later
+
+df_descriptive <- 
+  df_descriptive |> 
+  mutate(
+    d60 = car::recode(d60, "4=NA"),
+    d60_ordinal = factor(d60, levels = c(1, 2, 3), labels = c("Most of the time", "From time to time", "Almost never/ never"))
+  )
+
 ```
 
 ## Support for LGB rights
@@ -669,6 +570,14 @@ df_country_3 <-
 cor(df_country_3$prop_lgb_yes, df_country_3$prop_qc19_yes, method = "spearman")
 ```
 :::
+
+```{r}
+#| echo: false
+
+#alex needs this variable
+df_descriptive$d25_multinominal <- factor(df_descriptive$d25, labels = c("Rural area", "Small and middle sized town", "Large town", "Don't know"))
+
+```
 
 ## Legal protections
 
@@ -962,7 +871,9 @@ Data_final_Ind <- Individual_data |>
 ## 
 
 -   Once we had our variables confirmed from the descriptive analysis we moved to model these variables using a hierarchical (multilevel) logistic regression modeling.
--   We checked for missing data again, and we considered imputing the age_stopped_education variable because of the variables containing missing data, it made the most sense. We tested this out to see if it would help with the significance of the variable in the upcoming models, however failed to make a difference ultimately.
+-   We checked for missing data again, and we considered imputing the age_stopped_education variable because of the variables containing missing data, it made the most sense. We tested this out to see if it would help with the significance of the variable in the upcoming models, however failed to make a difference ultimately. The best imputation method seem to be PMM-Imputed distribution.
+
+## 
 
 ```{r}
 #| echo: true
@@ -1021,6 +932,8 @@ mice_imputed <- data.frame(
 
 ```
 
+## 
+
 ```{r}
 #| echo: true
 
@@ -1045,8 +958,6 @@ for (i in 1:length(variables)) {
 # Combine the new set of plots into a grid
 plot_grid(plotlist = plots, nrow = 3, ncol = 2)
 ```
-
-The best imputation method seem to be PMM-Imputed distribution.
 
 ```{r}
 #| echo: false
@@ -1077,9 +988,9 @@ data_reg_ind = data_reg_ind %>%
   filter(!is.na(binary_qc19))
 ```
 
-### Multi-level analysis
+## Multi-level analysis
 
-In order to do a multi-leveled analysis we are going to take generalized linear mixed-effects model (GLMM), where country_name will be the variable used as the random effects.
+In order to do the multi-leveled analysis we used a generalized linear mixed-effects model (GLMM), where country_name was the variable used as the random effects.
 
 ```{r}
 #| echo: false
@@ -1115,7 +1026,9 @@ glm_model_2 <- glmer(binary_qc19 ~ male + d11 + I(d11^2) + political_ideology +
 summary(glm_model_2)
 ```
 
-The model is clearly overfitted. And it suggests we have scaling issue. We fix this and move to remove the non-significant variables.
+## 
+
+The model was clearly overfitted. And it suggested we have scaling issue. We fix this and move to remove the non-significant variables.
 
 ```{r}
 #| echo: false
@@ -1147,44 +1060,27 @@ glm_model_4 <- glmer(binary_qc19 ~ male + d11 + I(d11^2) + political_ideology +
                data = Data, family = binomial, 
                control = glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 100000)))
 summary(glm_model_4)
-```
-
-```{r}
-#| echo: true
 
 library(stargazer)
+```
+
+## Model (stargazer)
+
+```{r}
 stargazer(glm_model_4, type = "text", title = "Results of GLMM Analysis", out = "model_results.html")
 
 ```
 
+## 
+
 We compared some models with different transformations and different variables and end up with the best model, to this one above with following results:
 
 ```{r}
-#| echo: true
 
 AIC(glm_model_4)
 BIC(glm_model_4)
 #glm_model_4 seems to show the besT lowest AIC and BIC
 ```
-
-```{r}
-#| echo: true
-
-plot(residuals(glm_model_4, type = "pearson"))
-```
-
-There's a large cluster of residuals around zero, which is not unexpected for binary data. We continue with the analysis.
-
-**Q-Q plot for the standardized residuals**
-
-```{r}
-#| echo: true
-
-qqmath(~ resid(glm_model_4, type = "pearson"), distribution = qnorm,
-       main = "Q-Q Plot of Pearson Residuals", xlab = "Theoretical Quantiles", ylab = "Sample Quantiles")
-```
-
-We do not see any systematic deviations that could indicate model misspecification. The Q-Q plot shows the residuals are not perfectly normally distributed, which is common and expected pattern for a logistic regression.
 
 ## Key Findings - Demographics and Beliefs
 
@@ -1210,10 +1106,10 @@ We do not see any systematic deviations that could indicate model misspecificati
 
 -   **Cross-Country Differences**: Variations in support for transgender rights across countries are influenced by demographics (gender, age), political and religious affiliations, social determinants, awareness of LGBTI issues, and economic conditions.
 
-
 -   Model
 
 -   we didnt put it because, our assumption is that individual level variables also explain cross country differences because demographics are different across countries
+
 -   but because individual level variables
 
 ## Prediction
@@ -1347,4 +1243,3 @@ GB not only has one of the highest Accuracy levels but also achieves the most ba
 We found that this model, is the most adept and effective at predicting whether countries will support the right of transgender individuals to change their civil documents.
 
 # THANK YOU!
-
